WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
281062
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flex-factor-less-than-one.html
https://bugs.webkit.org/show_bug.cgi?id=281062
Summary
[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flex-factor-less-th...
alan
Reported
2024-10-08 09:48:32 PDT
ssia
Attachments
[fast-cq]Patch
(2.49 KB, patch)
2024-10-08 09:52 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-10-08 09:52:38 PDT
Created
attachment 472860
[details]
[fast-cq]Patch
Antti Koivisto
Comment 2
2024-10-08 10:05:53 PDT
Comment on
attachment 472860
[details]
[fast-cq]Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=472860&action=review
> COMMIT_MESSAGE:14 > +Implement 9.7.5.b Calculate the remaining free space > + > +"Calculate the remaining free space as for initial free space, above. > +If the sum of the unfrozen flex items' flex factors is less than one, > +multiply the initial free space by this sum. > +If the magnitude of this value is less than the magnitude of the remaining free space, > +use this as the remaining free space." > + > +
https://drafts.csswg.org/css-flexbox-1/#resolve-flexible-lengths
Might be good to have some of these references as code comments too.
alan
Comment 3
2024-10-08 11:57:11 PDT
(In reply to Antti Koivisto from
comment #2
)
> Comment on
attachment 472860
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=472860&action=review
> > > COMMIT_MESSAGE:14 > > +Implement 9.7.5.b Calculate the remaining free space > > + > > +"Calculate the remaining free space as for initial free space, above. > > +If the sum of the unfrozen flex items' flex factors is less than one, > > +multiply the initial free space by this sum. > > +If the magnitude of this value is less than the magnitude of the remaining free space, > > +use this as the remaining free space." > > + > > +
https://drafts.csswg.org/css-flexbox-1/#resolve-flexible-lengths
> > Might be good to have some of these references as code comments too.
It is actually in the code just a few lines above where the lambda starts.
EWS
Comment 4
2024-10-08 15:03:16 PDT
Committed
284852@main
(7c396b74150e): <
https://commits.webkit.org/284852@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 472860
[details]
.
Radar WebKit Bug Importer
Comment 5
2024-10-08 15:04:15 PDT
<
rdar://problem/137540977
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug