[FFC] Fix imported/w3c/web-platform-tests/css/css-flexbox/flex-factor-less-than-one.html https://bugs.webkit.org/show_bug.cgi?id=281062

Reviewed by Antti Koivisto.

Implement 9.7.5.b Calculate the remaining free space

"Calculate the remaining free space as for initial free space, above.
If the sum of the unfrozen flex items' flex factors is less than one,
multiply the initial free space by this sum.
If the magnitude of this value is less than the magnitude of the remaining free space,
use this as the remaining free space."

https://drafts.csswg.org/css-flexbox-1/#resolve-flexible-lengths

* Source/WebCore/layout/formattingContexts/flex/FlexLayout.cpp: ^ spec text is already
in here a few lines above.
(WebCore::Layout::FlexLayout::computeMainSizeForFlexItems const):

Canonical link: https://commits.webkit.org/284852@main